--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -313,5 +313,5 @@ find_package(OpenCL REQUIRED)
 find_library(SOIL REQUIRED)
 add_definitions("-std=gnu++17 -Wall -fno-exceptions")
 include_directories(${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${SOIL_INCLUDE_DIR} ${OpenCL_INCLUDE_DIRS} ${Config++_INCLUDE_DIRS})
-target_link_libraries(nextfloor ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY} SOIL glfw ${OpenCL_LIBRARY} config++ tbb)
+target_link_libraries(nextfloor ${OPENGL_gl_LIBRARY} glew SOIL glfw ${OpenCL_LIBRARY} config++ tbb)
 target_compile_features(nextfloor PUBLIC cxx_nullptr)
